Limpieza de código: -> Eliminacion de todos los⚠️​ que no afectan al comportameinto del codigo. -> Eliminacion de imports innecesarios -> Eliminación de métodos sin uso ->Clases Builder, combatBuilder y Subsrciber elimindadas (no se usaban para nada) -> JavaDoc vacío eliminado